libqt6c/src/libqtextformat.hpp

typedef struct QBrush QBrush;
typedef struct QColor QColor;
typedef struct QPen QPen;
typedef struct QTextBlockFormat QTextBlockFormat;
typedef struct QTextCharFormat QTextCharFormat;
typedef struct QTextFormat QTextFormat;
typedef struct QTextFrameFormat QTextFrameFormat;
typedef struct QTextImageFormat QTextImageFormat;
typedef struct QTextLength QTextLength;
typedef struct QTextListFormat QTextListFormat;
typedef struct QTextTableCellFormat QTextTableCellFormat;
typedef struct QTextTableFormat QTextTableFormat;
typedef struct QVariant QVariant;
void QTextFormat_Swap(QTextFormat* self, QTextFormat* other);
void QTextFormat_Merge(QTextFormat* self, const QTextFormat* other);
bool QTextFormat_IsEmpty(const QTextFormat* self);
int QTextFormat_Type(const QTextFormat* self);
int QTextFormat_ObjectIndex(const QTextFormat* self);
void QTextFormat_SetObjectIndex(QTextFormat* self, int object);
QVariant* QTextFormat_Property(const QTextFormat* self, int propertyId);
void QTextFormat_SetProperty(QTextFormat* self, int propertyId, const QVariant* value);
void QTextFormat_ClearProperty(QTextFormat* self, int propertyId);
bool QTextFormat_HasProperty(const QTextFormat* self, int propertyId);
bool QTextFormat_BoolProperty(const QTextFormat* self, int propertyId);
int QTextFormat_IntProperty(const QTextFormat* self, int propertyId);
double QTextFormat_DoubleProperty(const QTextFormat* self, int propertyId);
libqt_string QTextFormat_StringProperty(const QTextFormat* self, int propertyId);
QColor* QTextFormat_ColorProperty(const QTextFormat* self, int propertyId);
QPen* QTextFormat_PenProperty(const QTextFormat* self, int propertyId);
QBrush* QTextFormat_BrushProperty(const QTextFormat* self, int propertyId);
QTextLength* QTextFormat_LengthProperty(const QTextFormat* self, int propertyId);
libqt_list /* of QTextLength* */ QTextFormat_LengthVectorProperty(const QTextFormat* self, int propertyId);
void QTextFormat_SetProperty2(QTextFormat* self, int propertyId, const libqt_list /* of QTextLength* */ lengths);
libqt_map /* of int to QVariant* */ QTextFormat_Properties(const QTextFormat* self);
int QTextFormat_PropertyCount(const QTextFormat* self);
void QTextFormat_SetObjectType(QTextFormat* self, int type);
int QTextFormat_ObjectType(const QTextFormat* self);
bool QTextFormat_IsCharFormat(const QTextFormat* self);
bool QTextFormat_IsBlockFormat(const QTextFormat* self);
bool QTextFormat_IsListFormat(const QTextFormat* self);
bool QTextFormat_IsFrameFormat(const QTextFormat* self);
bool QTextFormat_IsImageFormat(const QTextFormat* self);
bool QTextFormat_IsTableFormat(const QTextFormat* self);
bool QTextFormat_IsTableCellFormat(const QTextFormat* self);
QTextBlockFormat* QTextFormat_ToBlockFormat(const QTextFormat* self);
QTextCharFormat* QTextFormat_ToCharFormat(const QTextFormat* self);
QTextListFormat* QTextFormat_ToListFormat(const QTextFormat* self);
QTextTableFormat* QTextFormat_ToTableFormat(const QTextFormat* self);
QTextFrameFormat* QTextFormat_ToFrameFormat(const QTextFormat* self);
QTextImageFormat* QTextFormat_ToImageFormat(const QTextFormat* self);
QTextTableCellFormat* QTextFormat_ToTableCellFormat(const QTextFormat* self);
void QTextFormat_SetLayoutDirection(QTextFormat* self, int direction);
int QTextFormat_LayoutDirection(const QTextFormat* self);
void QTextFormat_SetBackground(QTextFormat* self, const QBrush* brush);
QBrush* QTextFormat_Background(const QTextFormat* self);
void QTextFormat_ClearBackground(QTextFormat* self);
void QTextFormat_SetForeground(QTextFormat* self, const QBrush* brush);
QBrush* QTextFormat_Foreground(const QTextFormat* self);
void QTextFormat_ClearForeground(QTextFormat* self);
QTextBlockFormat* QTextBlockFormat_new();
QTextBlockFormat* QTextBlockFormat_new2(const QTextBlockFormat* param1);
bool QTextBlockFormat_IsValid(const QTextBlockFormat* self);
void QTextBlockFormat_SetAlignment(QTextBlockFormat* self, int alignment);
int QTextBlockFormat_Alignment(const QTextBlockFormat* self);
void QTextBlockFormat_SetTopMargin(QTextBlockFormat* self, double margin);
double QTextBlockFormat_TopMargin(const QTextBlockFormat* self);
void QTextBlockFormat_SetBottomMargin(QTextBlockFormat* self, double margin);
double QTextBlockFormat_BottomMargin(const QTextBlockFormat* self);
void QTextBlockFormat_SetLeftMargin(QTextBlockFormat* self, double margin);
double QTextBlockFormat_LeftMargin(const QTextBlockFormat* self);
void QTextBlockFormat_SetRightMargin(QTextBlockFormat* self, double margin);
double QTextBlockFormat_RightMargin(const QTextBlockFormat* self);
void QTextBlockFormat_SetTextIndent(QTextBlockFormat* self, double aindent);
double QTextBlockFormat_TextIndent(const QTextBlockFormat* self);
void QTextBlockFormat_SetIndent(QTextBlockFormat* self, int indent);
int QTextBlockFormat_Indent(const QTextBlockFormat* self);
void QTextBlockFormat_SetHeadingLevel(QTextBlockFormat* self, int alevel);
int QTextBlockFormat_HeadingLevel(const QTextBlockFormat* self);
void QTextBlockFormat_SetLineHeight(QTextBlockFormat* self, double height, int heightType);
double QTextBlockFormat_LineHeight(const QTextBlockFormat* self, double scriptLineHeight, double scaling);
double QTextBlockFormat_LineHeight2(const QTextBlockFormat* self);
int QTextBlockFormat_LineHeightType(const QTextBlockFormat* self);
void QTextBlockFormat_SetNonBreakableLines(QTextBlockFormat* self, bool b);
bool QTextBlockFormat_NonBreakableLines(const QTextBlockFormat* self);
void QTextBlockFormat_SetPageBreakPolicy(QTextBlockFormat* self, int flags);
int QTextBlockFormat_PageBreakPolicy(const QTextBlockFormat* self);
void QTextBlockFormat_SetTabPositions(QTextBlockFormat* self, const libqt_list /* of QTextOption__Tab* */ tabs);
libqt_list /* of QTextOption__Tab* */ QTextBlockFormat_TabPositions(const QTextBlockFormat* self);
void QTextBlockFormat_SetMarker(QTextBlockFormat* self, int marker);
int QTextBlockFormat_Marker(const QTextBlockFormat* self);
void QTextBlockFormat_Delete(QTextBlockFormat* self);
QTextListFormat* QTextListFormat_new();
QTextListFormat* QTextListFormat_new2(const QTextListFormat* param1);
bool QTextListFormat_IsValid(const QTextListFormat* self);
void QTextListFormat_SetStyle(QTextListFormat* self, int style);
int QTextListFormat_Style(const QTextListFormat* self);
void QTextListFormat_SetIndent(QTextListFormat* self, int indent);
int QTextListFormat_Indent(const QTextListFormat* self);
void QTextListFormat_SetNumberPrefix(QTextListFormat* self, const libqt_string numberPrefix);
libqt_string QTextListFormat_NumberPrefix(const QTextListFormat* self);
void QTextListFormat_SetNumberSuffix(QTextListFormat* self, const libqt_string numberSuffix);
libqt_string QTextListFormat_NumberSuffix(const QTextListFormat* self);
void QTextListFormat_Delete(QTextListFormat* self);