QtBeef/src/Qt/qtextformat.bf

class QTextBlockFormat : IQTextBlockFormat, IQTextFormat
{
	private QTextBlockFormat_Ptr ptr;
	public void* ObjectPtr => ptr.Ptr;
	public this(QTextBlockFormat_Ptr ptr)
	{
		this.ptr = ptr;
	}
	public this()
	{
		this.ptr = CQt.QTextBlockFormat_new();
	}
	public this(IQTextBlockFormat param1)
	{
		this.ptr = CQt.QTextBlockFormat_new2((.)param1?.ObjectPtr);
	}
	public ~this()
	{
		CQt.QTextBlockFormat_Delete(this.ptr);
	}
	public bool IsValid()
	{
		return CQt.QTextBlockFormat_IsValid((.)this.ptr.Ptr);
	}
	public void SetAlignment(void* alignment)
	{
		CQt.QTextBlockFormat_SetAlignment((.)this.ptr.Ptr, alignment);
	}
	public void* Alignment()
	{
		return CQt.QTextBlockFormat_Alignment((.)this.ptr.Ptr);
	}
	public void SetTopMargin(double margin)
	{
		CQt.QTextBlockFormat_SetTopMargin((.)this.ptr.Ptr, margin);
	}
	public double TopMargin()
	{
		return CQt.QTextBlockFormat_TopMargin((.)this.ptr.Ptr);
	}
	public void SetBottomMargin(double margin)
	{
		CQt.QTextBlockFormat_SetBottomMargin((.)this.ptr.Ptr, margin);
	}
	public double BottomMargin()
	{
		return CQt.QTextBlockFormat_BottomMargin((.)this.ptr.Ptr);
	}
	public void SetLeftMargin(double margin)
	{
		CQt.QTextBlockFormat_SetLeftMargin((.)this.ptr.Ptr, margin);
	}
	public double LeftMargin()
	{
		return CQt.QTextBlockFormat_LeftMargin((.)this.ptr.Ptr);
	}
	public void SetRightMargin(double margin)
	{
		CQt.QTextBlockFormat_SetRightMargin((.)this.ptr.Ptr, margin);
	}
	public double RightMargin()
	{
		return CQt.QTextBlockFormat_RightMargin((.)this.ptr.Ptr);
	}
	public void SetTextIndent(double aindent)
	{
		CQt.QTextBlockFormat_SetTextIndent((.)this.ptr.Ptr, aindent);
	}
	public double TextIndent()
	{
		return CQt.QTextBlockFormat_TextIndent((.)this.ptr.Ptr);
	}
	public void SetIndent(c_int indent)
	{
		CQt.QTextBlockFormat_SetIndent((.)this.ptr.Ptr, indent);
	}
	public c_int Indent()
	{
		return CQt.QTextBlockFormat_Indent((.)this.ptr.Ptr);
	}
	public void SetHeadingLevel(c_int alevel)
	{
		CQt.QTextBlockFormat_SetHeadingLevel((.)this.ptr.Ptr, alevel);
	}
	public c_int HeadingLevel()
	{
		return CQt.QTextBlockFormat_HeadingLevel((.)this.ptr.Ptr);
	}
	public void SetLineHeight(double height, c_int heightType)
	{
		CQt.QTextBlockFormat_SetLineHeight((.)this.ptr.Ptr, height, heightType);
	}
	public double LineHeight(double scriptLineHeight, double scaling)
	{
		return CQt.QTextBlockFormat_LineHeight((.)this.ptr.Ptr, scriptLineHeight, scaling);
	}
	public double LineHeight2()
	{
		return CQt.QTextBlockFormat_LineHeight2((.)this.ptr.Ptr);
	}
	public c_int LineHeightType()
	{
		return CQt.QTextBlockFormat_LineHeightType((.)this.ptr.Ptr);
	}
	public void SetNonBreakableLines(bool b)
	{
		CQt.QTextBlockFormat_SetNonBreakableLines((.)this.ptr.Ptr, b);
	}
	public bool NonBreakableLines()
	{
		return CQt.QTextBlockFormat_NonBreakableLines((.)this.ptr.Ptr);
	}
	public void SetPageBreakPolicy(void* flags)
	{
		CQt.QTextBlockFormat_SetPageBreakPolicy((.)this.ptr.Ptr, flags);
	}
	public void* PageBreakPolicy()
	{
		return CQt.QTextBlockFormat_PageBreakPolicy((.)this.ptr.Ptr);
	}
	public void SetTabPositions(void** tabs)
	{
		CQt.QTextBlockFormat_SetTabPositions((.)this.ptr.Ptr, tabs);
	}
	public void* TabPositions()
	{
		return CQt.QTextBlockFormat_TabPositions((.)this.ptr.Ptr);
	}
	public void SetMarker(QTextBlockFormat_MarkerType marker)
	{
		CQt.QTextBlockFormat_SetMarker((.)this.ptr.Ptr, marker);
	}
	public QTextBlockFormat_MarkerType Marker()
	{
		return CQt.QTextBlockFormat_Marker((.)this.ptr.Ptr);
	}
	public void Swap(IQTextFormat other)
	{
		CQt.QTextFormat_Swap((.)this.ptr.Ptr, (.)other?.ObjectPtr);
	}
	public void Merge(IQTextFormat other)
	{
		CQt.QTextFormat_Merge((.)this.ptr.Ptr, (.)other?.ObjectPtr);
	}
	public bool IsEmpty()
	{
		return CQt.QTextFormat_IsEmpty((.)this.ptr.Ptr);
	}
	public c_int Type()
	{
		return CQt.QTextFormat_Type((.)this.ptr.Ptr);
	}
	public c_int ObjectIndex()
	{
		return CQt.QTextFormat_ObjectIndex((.)this.ptr.Ptr);
	}
	public void SetObjectIndex(c_int object)
	{
		CQt.QTextFormat_SetObjectIndex((.)this.ptr.Ptr, object);
	}
	public QVariant_Ptr Property(c_int propertyId)
	{
		return QVariant_Ptr(CQt.QTextFormat_Property((.)this.ptr.Ptr, propertyId));
	}
	public void SetProperty(c_int propertyId, IQVariant value)
	{
		CQt.QTextFormat_SetProperty((.)this.ptr.Ptr, propertyId, (.)value?.ObjectPtr);
	}
	public void ClearProperty(c_int propertyId)
	{
		CQt.QTextFormat_ClearProperty((.)this.ptr.Ptr, propertyId);
	}
	public bool HasProperty(c_int propertyId)
	{
		return CQt.QTextFormat_HasProperty((.)this.ptr.Ptr, propertyId);
	}
	public bool BoolProperty(c_int propertyId)
	{
		return CQt.QTextFormat_BoolProperty((.)this.ptr.Ptr, propertyId);
	}
	public c_int IntProperty(c_int propertyId)
	{
		return CQt.QTextFormat_IntProperty((.)this.ptr.Ptr, propertyId);
	}
	public double DoubleProperty(c_int propertyId)
	{
		return CQt.QTextFormat_DoubleProperty((.)this.ptr.Ptr, propertyId);
	}
	public void StringProperty(String outStr, c_int propertyId)
	{
		CQt.QTextFormat_StringProperty((.)this.ptr.Ptr, propertyId);
	}
	public QColor_Ptr ColorProperty(c_int propertyId)
	{
		return QColor_Ptr(CQt.QTextFormat_ColorProperty((.)this.ptr.Ptr, propertyId));
	}
	public QPen_Ptr PenProperty(c_int propertyId)
	{
		return QPen_Ptr(CQt.QTextFormat_PenProperty((.)this.ptr.Ptr, propertyId));
	}
	public QBrush_Ptr BrushProperty(c_int propertyId)
	{
		return QBrush_Ptr(CQt.QTextFormat_BrushProperty((.)this.ptr.Ptr, propertyId));
	}
	public QTextLength_Ptr LengthProperty(c_int propertyId)
	{
		return QTextLength_Ptr(CQt.QTextFormat_LengthProperty((.)this.ptr.Ptr, propertyId));
	}
	public void* LengthVectorProperty(c_int propertyId)
	{
		return CQt.QTextFormat_LengthVectorProperty((.)this.ptr.Ptr, propertyId);
	}
	public void SetProperty2(c_int propertyId, void** lengths)
	{
		CQt.QTextFormat_SetProperty2((.)this.ptr.Ptr, propertyId, lengths);
	}
	public void* Properties()
	{
		return CQt.QTextFormat_Properties((.)this.ptr.Ptr);
	}
	public c_int PropertyCount()
	{
		return CQt.QTextFormat_PropertyCount((.)this.ptr.Ptr);
	}
	public void SetObjectType(c_int type)
	{
		CQt.QTextFormat_SetObjectType((.)this.ptr.Ptr, type);
	}
	public c_int ObjectType()
	{
		return CQt.QTextFormat_ObjectType((.)this.ptr.Ptr);
	}
	public bool IsCharFormat()
	{
		return CQt.QTextFormat_IsCharFormat((.)this.ptr.Ptr);
	}
	public bool IsBlockFormat()
	{
		return CQt.QTextFormat_IsBlockFormat((.)this.ptr.Ptr);
	}
	public bool IsListFormat()
	{
		return CQt.QTextFormat_IsListFormat((.)this.ptr.Ptr);
	}
	public bool IsFrameFormat()
	{
		return CQt.QTextFormat_IsFrameFormat((.)this.ptr.Ptr);
	}
	public bool IsImageFormat()
	{
		return CQt.QTextFormat_IsImageFormat((.)this.ptr.Ptr);
	}
	public bool IsTableFormat()
	{
		return CQt.QTextFormat_IsTableFormat((.)this.ptr.Ptr);
	}
	public bool IsTableCellFormat()
	{
		return CQt.QTextFormat_IsTableCellFormat((.)this.ptr.Ptr);
	}
	public QTextBlockFormat_Ptr ToBlockFormat()
	{
		return QTextBlockFormat_Ptr(CQt.QTextFormat_ToBlockFormat((.)this.ptr.Ptr));
	}
	public QTextCharFormat_Ptr ToCharFormat()
	{
		return QTextCharFormat_Ptr(CQt.QTextFormat_ToCharFormat((.)this.ptr.Ptr));
	}
	public QTextListFormat_Ptr ToListFormat()
	{
		return QTextListFormat_Ptr(CQt.QTextFormat_ToListFormat((.)this.ptr.Ptr));
	}
	public QTextTableFormat_Ptr ToTableFormat()
	{
		return QTextTableFormat_Ptr(CQt.QTextFormat_ToTableFormat((.)this.ptr.Ptr));
	}
	public QTextFrameFormat_Ptr ToFrameFormat()
	{
		return QTextFrameFormat_Ptr(CQt.QTextFormat_ToFrameFormat((.)this.ptr.Ptr));
	}
	public QTextImageFormat_Ptr ToImageFormat()
	{
		return QTextImageFormat_Ptr(CQt.QTextFormat_ToImageFormat((.)this.ptr.Ptr));
	}
	public QTextTableCellFormat_Ptr ToTableCellFormat()
	{
		return QTextTableCellFormat_Ptr(CQt.QTextFormat_ToTableCellFormat((.)this.ptr.Ptr));
	}
	public void SetLayoutDirection(Qt_LayoutDirection direction)
	{
		CQt.QTextFormat_SetLayoutDirection((.)this.ptr.Ptr, direction);
	}
	public Qt_LayoutDirection LayoutDirection()
	{
		return CQt.QTextFormat_LayoutDirection((.)this.ptr.Ptr);
	}
	public void SetBackground(IQBrush brush)
	{
		CQt.QTextFormat_SetBackground((.)this.ptr.Ptr, (.)brush?.ObjectPtr);
	}
	public QBrush_Ptr Background()
	{
		return QBrush_Ptr(CQt.QTextFormat_Background((.)this.ptr.Ptr));
	}
	public void ClearBackground()
	{
		CQt.QTextFormat_ClearBackground((.)this.ptr.Ptr);
	}
	public void SetForeground(IQBrush brush)
	{
		CQt.QTextFormat_SetForeground((.)this.ptr.Ptr, (.)brush?.ObjectPtr);
	}
	public QBrush_Ptr Foreground()
	{
		return QBrush_Ptr(CQt.QTextFormat_Foreground((.)this.ptr.Ptr));
	}
	public void ClearForeground()
	{
		CQt.QTextFormat_ClearForeground((.)this.ptr.Ptr);
	}
}
interface IQTextBlockFormat : IQtObjectInterface
{
}
// --------------------------------------------------------------
// QTextListFormat
// --------------------------------------------------------------
[CRepr]
struct QTextListFormat_Ptr
{
	public void* Ptr;
	public this(void* ptr)
	{
		this.Ptr = ptr;
	}
}
extension CQt
{
	[LinkName("QTextListFormat_new")]
	public static extern QTextListFormat_Ptr QTextListFormat_new();
	[LinkName("QTextListFormat_new2")]
	public static extern QTextListFormat_Ptr QTextListFormat_new2(void** param1);
	[LinkName("QTextListFormat_Delete")]
	public static extern void QTextListFormat_Delete(QTextListFormat_Ptr self);
	[LinkName("QTextListFormat_IsValid")]
	public static extern bool QTextListFormat_IsValid(void* self);
	[LinkName("QTextListFormat_SetStyle")]
	public static extern void QTextListFormat_SetStyle(void* self, QTextListFormat_Style style);
	[LinkName("QTextListFormat_Style")]
	public static extern QTextListFormat_Style QTextListFormat_Style(void* self);
	[LinkName("QTextListFormat_SetIndent")]
	public static extern void QTextListFormat_SetIndent(void* self, c_int indent);
	[LinkName("QTextListFormat_Indent")]
	public static extern c_int QTextListFormat_Indent(void* self);
	[LinkName("QTextListFormat_SetNumberPrefix")]
	public static extern void QTextListFormat_SetNumberPrefix(void* self, libqt_string numberPrefix);
	[LinkName("QTextListFormat_NumberPrefix")]
	public static extern libqt_string QTextListFormat_NumberPrefix(void* self);
	[LinkName("QTextListFormat_SetNumberSuffix")]
	public static extern void QTextListFormat_SetNumberSuffix(void* self, libqt_string numberSuffix);
	[LinkName("QTextListFormat_NumberSuffix")]
	public static extern libqt_string QTextListFormat_NumberSuffix(void* self);
}
